<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_location_searching"
        android:orderInCategory="1"
        android:tint="@color/black"

        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        android:tint="@color/black"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>